// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parse-embeds > embed at end of textNode 1`] = `
[
  {
    "position": {
      "end": {
        "column": 28,
        "line": 1,
        "offset": 27,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "text",
    "value": "And here is another video: ",
  },
  {
    "position": {
      "end": {
        "column": 45,
        "line": 1,
        "offset": 44,
      },
      "start": {
        "column": 28,
        "line": 1,
        "offset": 27,
      },
    },
    "type": "image",
    "url": "another_video.mp4",
  },
]
`;

exports[`parse-embeds > embed in the middle of a textNode 1`] = `
[
  {
    "position": {
      "end": {
        "column": 17,
        "line": 1,
        "offset": 16,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "text",
    "value": "First some text ",
  },
  {
    "position": {
      "end": {
        "column": 33,
        "line": 1,
        "offset": 32,
      },
      "start": {
        "column": 17,
        "line": 1,
        "offset": 16,
      },
    },
    "type": "image",
    "url": "then_a_video.mp4",
  },
  {
    "position": {
      "end": {
        "column": 58,
        "line": 1,
        "offset": 57,
      },
      "start": {
        "column": 38,
        "line": 1,
        "offset": 37,
      },
    },
    "type": "text",
    "value": " then some more text",
  },
]
`;

exports[`parse-embeds > embed with size info 1`] = `
[
  {
    "position": {
      "end": {
        "column": 29,
        "line": 1,
        "offset": 28,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "text",
    "value": "Here's an embedded picture: ",
  },
  {
    "position": {
      "end": {
        "column": 47,
        "line": 1,
        "offset": 46,
      },
      "start": {
        "column": 29,
        "line": 1,
        "offset": 28,
      },
    },
    "type": "image",
    "url": "a_picture.webp|100",
  },
]
`;

exports[`parse-embeds > two embeds 1`] = `
[
  {
    "position": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "text",
    "value": "text ",
  },
  {
    "position": {
      "end": {
        "column": 16,
        "line": 1,
        "offset": 15,
      },
      "start": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
    },
    "type": "image",
    "url": "video1.mp4",
  },
  {
    "position": {
      "end": {
        "column": 26,
        "line": 1,
        "offset": 25,
      },
      "start": {
        "column": 21,
        "line": 1,
        "offset": 20,
      },
    },
    "type": "text",
    "value": " and ",
  },
  {
    "position": {
      "end": {
        "column": 39,
        "line": 1,
        "offset": 38,
      },
      "start": {
        "column": 26,
        "line": 1,
        "offset": 25,
      },
    },
    "type": "image",
    "url": "picture2.webp",
  },
  {
    "position": {
      "end": {
        "column": 52,
        "line": 1,
        "offset": 51,
      },
      "start": {
        "column": 44,
        "line": 1,
        "offset": 43,
      },
    },
    "type": "text",
    "value": " the end",
  },
]
`;
